--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "launcher_graphics.h": "c",
         "acknex.h": "c",
         "list.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "dynamic_array.h": "c"
     }
 }
